[gd_scene load_steps=12 format=3 uid="uid://cwak5ml2fjmpx"]

[ext_resource type="PackedScene" uid="uid://c76wih3clv6t6" path="res://levels/utils/level_ground.tscn" id="1_68i5q"]
[ext_resource type="PackedScene" uid="uid://bms21soqnvks" path="res://levels/utils/anchor_2d.tscn" id="2_7j1bh"]
[ext_resource type="PackedScene" uid="uid://bwccpor1dg3r8" path="res://levels/utils/trigger_area.tscn" id="3_b5fa8"]
[ext_resource type="PackedScene" uid="uid://bn0sx0i60j63e" path="res://player/player.tscn" id="4_pfcw2"]
[ext_resource type="Script" path="res://levels/utils/level_music_starter.gd" id="5_u4gof"]
[ext_resource type="Script" path="res://levels/credits_roll.gd" id="6_batki"]
[ext_resource type="Theme" uid="uid://8h8c135yb33a" path="res://assets/guides_ui_theme.tres" id="7_ssheo"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8ukao"]
size = Vector2(3584, 1664)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r51v4"]
size = Vector2(3200, 576)

[sub_resource type="Gradient" id="Gradient_ofy1a"]
colors = PackedColorArray(1, 1, 1, 0, 1, 1, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_m38xd"]
gradient = SubResource("Gradient_ofy1a")
width = 7800
height = 1024

[node name="level_credits" type="Node2D"]

[node name="LevelMusicStarter" type="Node" parent="."]
script = ExtResource("5_u4gof")
level_track_index = 6

[node name="LevelGround" parent="." instance=ExtResource("1_68i5q")]

[node name="Background" parent="LevelGround" index="0"]
modulate = Color(0, 0, 0, 1)
z_index = -2
position = Vector2(4352, -816)
scale = Vector2(12992, 4320)

[node name="GroundPolygon" parent="LevelGround" index="1"]
color = Color(0, 0, 0, 1)
texture = null
polygon = PackedVector2Array(0, 0, 0, -1536, 3072, -1536, 3072, -320, 10752, -320, 10752, -4352, -2304, -4352, -2304, 2304, 10752, 2304, 10752, 0)

[node name="Lineart" parent="LevelGround" index="2"]
points = PackedVector2Array(0, 0, 0, -1536, 3072, -1536, 3072, -320, 10752, -320, 10752, -4352, -2304, -4352, -2304, 2304, 10752, 2304, 10752, 0, 0, 0)
default_color = Color(0, 0, 0, 1)

[node name="EntryDoorGradient" parent="LevelGround" index="3"]
visible = false
position = Vector2(-1024, 0)

[node name="EntryDoorOver" parent="LevelGround" index="4"]
visible = false
position = Vector2(-1920, 0)

[node name="ExitDoorGradient" parent="LevelGround" index="5"]
visible = false
position = Vector2(-992, 0)

[node name="ExitDoorOver" parent="LevelGround" index="6"]
visible = false
position = Vector2(-1856, 0)

[node name="Anchor2D" parent="." instance=ExtResource("2_7j1bh")]
position = Vector2(1536, -768)
entered_zoom = 0.5
entered_max_speed = 3000.0
exited_max_speed = 3000.0

[node name="CollisionShape2D" parent="Anchor2D" index="0"]
position = Vector2(-256, 0)
shape = SubResource("RectangleShape2D_8ukao")

[node name="Anchor2D2" parent="." instance=ExtResource("2_7j1bh")]
position = Vector2(9376, -160)
entered_zoom = 0.8
entered_max_speed = 3000.0
exited_max_speed = 3000.0

[node name="CollisionShape2D" parent="Anchor2D2" index="0"]
shape = SubResource("RectangleShape2D_r51v4")

[node name="TriggerArea" parent="." instance=ExtResource("3_b5fa8")]
position = Vector2(10816, -256)
trigger_function = 8

[node name="Player" parent="." instance=ExtResource("4_pfcw2")]
position = Vector2(128, -224)
wallslide_ability_active = true
start_as_big_frog = true
current_ability = "ability3"

[node name="GrappleController" parent="Player" index="5"]
ability_active = true

[node name="ShootController" parent="Player" index="6"]
ability_active = true

[node name="Decorations" type="Node2D" parent="."]
z_index = -1

[node name="ExitGradient" type="Sprite2D" parent="Decorations"]
position = Vector2(7294, -224)
scale = Vector2(0.885641, 1)
texture = SubResource("GradientTexture2D_m38xd")

[node name="CreditsRoll" type="Node2D" parent="."]
script = ExtResource("6_batki")
label_hold_time = 7.0
label_tween_time = 4.0

[node name="Control" type="Control" parent="CreditsRoll"]
layout_mode = 3
anchors_preset = 0
offset_left = 288.0
offset_top = -1184.0
offset_right = 328.0
offset_bottom = -1144.0
scale = Vector2(2.1, 2.1)

[node name="Label1" type="Label" parent="CreditsRoll/Control"]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_right = 963.0
offset_bottom = 71.0
theme = ExtResource("7_ssheo")
text = "Lo√Øc Sagot - Music Composer"

[node name="Label2" type="Label" parent="CreditsRoll/Control"]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 533.333
offset_right = 1319.33
offset_bottom = 145.0
theme = ExtResource("7_ssheo")
text = "Natalie Choi - Artist
Natalie Choi - Animator"

[node name="Label3" type="Label" parent="CreditsRoll/Control"]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 167.619
offset_top = 121.905
offset_right = 1042.62
offset_bottom = 266.905
theme = ExtResource("7_ssheo")
text = "Krasapan - Programmer
Krasapan - Level Designer"

[node name="Label4" type="Label" parent="CreditsRoll/Control"]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_top = 350.476
offset_right = 1182.0
offset_bottom = 421.476
theme = ExtResource("7_ssheo")
text = "Matisse Verheyden - Sound Effects"

[node name="Label5" type="Label" parent="CreditsRoll/Control"]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = -137.143
offset_top = 152.381
offset_right = 939.857
offset_bottom = 297.381
theme = ExtResource("7_ssheo")
text = "Killusion - Environmental Artist
Killusion - Visual Effects"

[node name="Label6" type="Label" parent="CreditsRoll/Control"]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_right = 961.0
offset_bottom = 145.0
theme = ExtResource("7_ssheo")
text = "Newt LaJeunesse - Artist
Newt LaJeunesse - Animator"

[editable path="LevelGround"]
[editable path="Anchor2D"]
[editable path="Anchor2D2"]
[editable path="Player"]
[editable path="Player/Rig/HopperTransform/Hopper"]
[editable path="Player/Particles/VfxBile"]
